WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133323
[wk2] PDFPlugin snapshots are misplaced
https://bugs.webkit.org/show_bug.cgi?id=133323
Summary
[wk2] PDFPlugin snapshots are misplaced
Tim Horton
Reported
2014-05-27 12:58:50 PDT
<
rdar://problem/17021651
>
Attachments
patch
(2.08 KB, patch)
2014-05-27 12:59 PDT
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-05-27 12:59:50 PDT
Created
attachment 232147
[details]
patch
Tim Horton
Comment 2
2014-05-27 13:46:05 PDT
http://trac.webkit.org/changeset/169398
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug