[wk2] PDFPlugin snapshots are misplaced https://bugs.webkit.org/show_bug.cgi?id=133323

Reviewed by Simon Fraser.

* WebProcess/Plugins/PDF/PDFPlugin.mm:
(WebKit::PDFPlugin::paintControlForLayerInContext):
(WebKit::PDFPlugin::snapshot):
Include the scroll offset in the snapshot translation,
and use the whole document size instead of just the view size.


Canonical link: https://commits.webkit.org/151351@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169398 268f45cc-cd09-0410-ab3c-d52691b4dbfc